objects/SVMXC__SVMX_Jobs__c.object
<CustomObject>
    <description>This object tracks various jobs that are launched from ServiceMax such as the OptiMax dispatch optimization job.</description>
    <fields>
        <fullName>SVMXC__Age__c</fullName>
        <description>Current age of the job. Used to abort zombie jobs</description>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Batch_Job__c</fullName>
        <description>Used to store the Batch job Id to track and kill the process if batch execution takes place for longer time.</description>
        <inlineHelpText>Used to store the Batch job Id to track and kill the process if batch execution takes place for longer time.</inlineHelpText>
        <label>Batch Job</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__End_Time__c</fullName>
        <description>Time when job ended</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Initiated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that initiated the job</description>
        <label>Initiated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OptiMax_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Message__c</fullName>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__OptiMax_Message__c</fullName>
        <label>Job Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SVMX_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dispatch process associated with the job</description>
        <label>SVMX Process</label>
        <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
        <relationshipLabel>ServiceMax Jobs</relationshipLabel>
        <relationshipName>OptiMax_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Scheduled_Resources__c</fullName>
        <description>Number of technicians scheduled by the job</description>
        <label>Number Of Scheduled Resources</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Scheduled_Work_Orders__c</fullName>
        <description>Number of work orders scheduled by the job</description>
        <label>Number Of Scheduled Work Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Sent_Events_Count__c</fullName>
        <label>Number Of Sent Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Sent_Resources__c</fullName>
        <description>Number of technicians sent to the job</description>
        <label>Number Of Sent Resources</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Sent_Work_Orders__c</fullName>
        <description>Number of work orders sent to the job</description>
        <label>Number Of Sent Work Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Start_Time__c</fullName>
        <description>Time when job started</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Status__c</fullName>
        <description>Job status</description>
        <label>Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Territory for which the job was initiated</description>
        <label>Territory</label>
        <referenceTo>SVMXC__Territory__c</referenceTo>
        <relationshipLabel>ServiceMax Jobs</relationshipLabel>
        <relationshipName>SVMX_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Total_Distance__c</fullName>
        <description>Total distance of all routes calculated by the job</description>
        <label>Total Distance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Total_Driving_Time__c</fullName>
        <description>Total driving time for all resources scheduled by the job</description>
        <label>Total Driving Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Total_Route_Time__c</fullName>
        <description>Total route time for all resources scheduled by the job</description>
        <label>Total Route Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Type__c</fullName>
        <description>Job type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Incremental</fullName>
                </value>
                <value>
                    <fullName>Scheduled SFM</fullName>
                </value>
                <value>
                    <fullName>Auto Configurator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ServiceMax Job</label>
    <nameField>
        <displayFormat>SJ-{00000000}</displayFormat>
        <label>Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ServiceMax Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>